--- a/appsettings - 副本.json
+++ b/appsettings - 副本.json
@@ -6,19 +6,8 @@
       "ListenPort": 443,
       "MirrorSni": true,
       "MirrorPort": true,
-      "AllowedSuffixes": [
-        "mtalk.google.com",
-        "mtalk4.google.com",
-        "alt1-mtalk.google.com",
-        "alt2-mtalk.google.com",
-        "alt3-mtalk.google.com",
-        "alt4-mtalk.google.com",
-        "alt5-mtalk.google.com",
-        "alt6-mtalk.google.com",
-        "alt7-mtalk.google.com",
-        "alt8-mtalk.google.com"
-      ],
-      "DefaultUpstreamHost": "mtalk.google.com",
+      "AllowedSuffixes": ["googleapis.com", "google.com"],
+      "DefaultUpstreamHost": "fcm.googleapis.com",
       "RejectIfNoValidSni": false
     },
     {
